sync-fw (0.5.40) stable; urgency=low

  * Fixes: NB#266496 - Ovi.com sync doesn't start after account is configured thru accounts application

 -- Duggirala Karthik <karthik.2.duggirala@nokia.com>  Thu, 16 Jun 2011 15:33:00 +3030

sync-fw (0.5.39) stable; urgency=low

  * Fixes: NB#265693 - Ovi contacts cannot be synced to device on enabling
    contacts data for an existing ovi account.

 -- Santosh Puranik <santosh.puranik@nokia.com>  Wed, 15 Jun 2011 10:55:00 +0530

sync-fw (0.5.38) stable; urgency=low

  * Fixes: NB#264754 - Incorrect next Schedule time is displayed in CalDAV
    Schedule setting during the Peak off days.

 -- Santosh Puranik <santosh.puranik@nokia.com>  Mon, 13 Jun 2011 17:07:00 +0330

sync-fw (0.5.37) stable; urgency=low

  * Fixes: NB#264165 - Ovi.com sync doesn't start after account is configured
    thru accounts application.

 -- Santosh Puranik <santosh.puranik@nokia.com>  Thu, 09 Jun 2011 17:07:00 +0330

sync-fw (0.5.36) stable; urgency=low

  * Fixes: Schedule settings changes for accounts integration. 

 -- Duggirala Karthik <karthik.2.duggirala@nokia.com>  Fri, 03 Jun 2011 11:47:42 +0330

sync-fw (0.5.35) stable; urgency=low

  * Fixes: Changes in AccountsHelper and in SyncSchedule. 

 -- Duggirala Karthik <karthik.2.duggirala@nokia.com>  Wed, 01 Jun 2011 11:47:42 +0330

sync-fw (0.5.34) stable; urgency=low

  * Fixes: NB#261533 - Removing Q_ASSERT from connect
  * Fixes: NB#261555 - Removing Q_ASSERT from connect
  * Fixes: NB#257713 - msynd wakes up every ten minutes even when not
    connected to internet.

 -- Amit <amit.5.aggarwal@nokia.com>  Tue, 31 May 2011 11:49:51 +0530

sync-fw (0.5.33) stable; urgency=low

  * Fixes: NB#238013 - reduce amount of logging and logging impact in sync-fw

 -- Deepak Kodihalli <deepak.kodihalli@nokia.com>  Mon, 30 May 2011 11:49:51 +0530

sync-fw (0.5.32) stable; urgency=low

  * Fixes:  Notes created in device not synchronized to other devices
